@@ -1,5 +1,9 @@
 2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/ntfs.cc: replaced ntfscluster with ntfsresize (see #350789)
+
+2006-08-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* happy 24th birthday Johannes! :^)
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: restructured resize_move() to be more robust.
